--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,7 @@
 buildscript {
     ext {
         compose_version = '1.1.1'
-    }
-    dependencies {
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.41'
+        koin_version= "3.2.0-beta-1"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
