--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         compose_version = '1.1.1'
         koin_version= "3.2.0-beta-1"
+        nav_version = "2.4.2"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
